[package]
name = "kono"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
graphql-parser = "0.4.0"
http = "0.2.8"
indexmap = { version = "1.9.1", features = ["serde"] }
reqwest = "0.11.11"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
warp = { version = "0.3.2", optional = true }

kono-aspect = { path = "kono-aspect" }
kono-executor = { path = "kono-executor" }
kono-introspection = { path = "kono-introspection" }
kono-macros = { path = "kono-macros" }
kono-schema = { path = "kono-schema" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
unindent = "0.1.10"

kono-macros = { path = "kono-macros" }
kono-introspection = { path = "kono-introspection" }

[features]
default = ["warp-server"]
warp-server = ["warp"]

[workspace]
members = [
	"copa",
    "dbounce",
	"kono-aspect",
	"kono-executor",
	"kono-introspection",
	"kono-macros",
	"kono-schema",
    "litho-compiler",
    "litho-diagnostics",
    "litho-import",
    "litho-language",
    "litho-lsp",
    "litho-tests",
    "litho-types",
	"litho-validation",
]
