[package]
name = "dbounce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", default-features = false }
tokio = { version = "1.21.2", features = ["time"] }

[dev-dependencies]
futures = { version = "0.3.25", default-features = false, features = ["std"] }
tokio = { version = "*", features = ["macros", "rt"] }
