[package]
name = "kono-aspect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.81"

copa = { path = "../copa" }
kono-executor = { path = "../kono-executor" }
kono-schema = { path = "../kono-schema" }
