[package]
name = "kono-introspection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.4.0"

kono-aspect = { path = "../kono-aspect" }
kono-executor = { path = "../kono-executor" }
kono-macros = { path = "../kono-macros" }
kono-schema = { path = "../kono-schema" }
