[package]
name = "litho-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "litho"

[dependencies]
smol_str = "0.1.23"

litho-compiler = { path = "../litho-compiler" }
litho-language = { path = "../litho-language" }
ariadne = "0.1.5"
glob = "0.3.0"
