[package]
name = "litho-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.3"

litho-diagnostics = { path = "../litho-diagnostics" }
litho-language = { path = "../litho-language" }
litho-types = { path = "../litho-types" }
litho-validation = { path = "../litho-validation" }
