[package]
name = "litho-diagnostics"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.1.5", optional = true }
paste = "1.0.9"

[features]
default = ["with-ariadne"]
with-ariadne = ["ariadne"]
