[package]
name = "litho-diagnostics"
version = "1.3.4"
edition = "2021"
license = "MIT"
description = "Definitions for all diagnostics that Litho (a GraphQL framework) can emit."
documentation = "https://docs.rs/litho-diagnostics/"
homepage = "https://github.com/glacyr/litho/tree/main/litho-diagnostics"
repository = "https://github.com/glacyr/litho"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.1.5", optional = true }
paste = "1.0.9"

[features]
default = ["with-ariadne"]
with-ariadne = ["ariadne"]
