[package]
name = "litho-import"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.147", features = ["derive"] }

litho-language = { path = "../litho-language" }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }
