[package]
name = "litho-language"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
nom = "7.1.1"
unindent = "0.1.10"

ariadne = "0.1.5"
litho-diagnostics = { path = "../litho-diagnostics" }
wrom = { path = "../wrom" }
