[package]
name = "litho-lsp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.25"
js-sys = "0.3.60"
litho-lsp = { path = "../litho-lsp", default-features = false }
lsp-types = { version = "*", features = ["proposed"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "*" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
