[package]
name = "litho-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
line-col = "0.2.1"
lsp-types = { version = "*", features = ["proposed"] }
serde = "1.0.147"
serde_json = { version = "*" }
smol_str = "0.1.23"

ignore = { version = "0.4.18", optional = true }
tokio = { version = "1.21.1", features = ["full"], optional = true }
tower-lsp = { version = "0.17.0", optional = true }

dbounce = { path = "../dbounce", optional = true }
litho-compiler = { path = "../litho-compiler" }
litho-diagnostics = { path = "../litho-diagnostics" }
litho-import = { path = "../litho-import", optional = true }
litho-language = { path = "../litho-language" }
litho-types = { path = "../litho-types" }
litho-validation = { path = "../litho-validation" }

[features]
default = ["dbounce", "tower-lsp", "tokio", "fs", "threaded"]
fs = ["ignore"]
threaded = ["litho-import"]
