[package]
name = "litho-types"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

litho-language = { path = "../litho-language" }
