[package]
name = "litho-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.4.0"
owo-colors = "3.4.0"

[dev-dependencies]
criterion = "0.3.6"
strip-ansi-escapes = "0.1.1"
unindent = "0.1.10"

[[bench]]
name = "complex"
harness = false
