[package]
name = "litho-validation"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litho-diagnostics = { path = "../litho-diagnostics" }
litho-language = { path = "../litho-language" }
litho-types = { path = "../litho-types" }
